fixed word wrap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,9 +32,9 @@ body label{
 /* ====== MONGO CONFIG SECTION ====== */
 
 #text{
-	white-space: pre;
+	overflow-wrap: break-word !important;
+	white-space: pre-line !important;
 }
-
 
 footer{
 	padding: 30px 0 70px 0 !important;
@@ -42,7 +42,6 @@ footer{
 	margin-bottom: -50px !important;
 	bottom: 0px !important;
 }
-
 
 .welcomeh1{
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
